--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
          </div>
 
          <div class="content">
-            <p class="hero">It's a state of mind</p>
-            <p class="h1">It's a state of mind</p>
-            <p class="h2">It's a state of mind</p>
-            <p class="h3">It's a state of mind</p>
-            <p class="h4">It's a state of mind</p>
-            <p class="body-big">It's a state of mind</p>
-            <p class="body">It's a state of mind</p>
-            <p class="body-small">It's a state of mind</p>
-            <p class="body-x-small">It's a state of mind</p>
+            <p class="hero">It is a state of mind</p>
+            <p class="h1">It is a state of mind</p>
+            <p class="h2">It is a state of mind</p>
+            <p class="h3">It is a state of mind</p>
+            <p class="h4">It is a state of mind</p>
+            <p class="body-big">It is a state of mind</p>
+            <p class="body">It is a state of mind</p>
+            <p class="body-small">It is a state of mind</p>
+            <p class="body-x-small">It is a state of mind</p>
          </div>
 
       </div>
