Added intelligent tags, and they are now working

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
          </div>
 
          <div class="content">
-            <p id="render-text" class="hero render-text">It's a state of mind</p>
-            <p class="h1 render-text">It's a state of mind</p>
-            <p class="h2 render-text">It's a state of mind</p>
-            <p class="h3 render-text">It's a state of mind</p>
-            <p class="h4 render-text">It's a state of mind</p>
-            <p class="body-big render-text">It's a state of mind</p>
-            <p class="body render-text">It's a state of mind</p>
-            <p class="body-small render-text">It's a state of mind</p>
-            <p class="body-x-small render-text">It's a state of mind</p>
+            <p class="hero value-readout">It's a state of mind</p>
+            <p class="h1 value-readout">It's a state of mind</p>
+            <p class="h2 value-readout">It's a state of mind</p>
+            <p class="h3 value-readout">It's a state of mind</p>
+            <p class="h4 value-readout">It's a state of mind</p>
+            <p class="body-big value-readout">It's a state of mind</p>
+            <p class="body value-readout">It's a state of mind</p>
+            <p class="body-small value-readout">It's a state of mind</p>
+            <p class="body-x-small value-readout">It's a state of mind</p>
          </div>
 
       </div>
