--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <!-- Intro -->
             <img class="logo" src="resources/cp-images/logo.png" alt="logo">
             <div class="em-dash"></div>
-            <p class="intro"><strong>Resize the browser window</strong> to craft typography thats perfect at every break-point. Inputs that are <span style="color: #1432FF;">blue</span> are active in this breakpoint.</p>
+            <p class="intro"><strong>Resize the browser window</strong> to craft your typography for every break-point. Inputs that are <span style="color: #1432FF;">blue</span> are active in <strong>this</strong> breakpoint.</p>
             <!-- <p><a href="https://github.com/JoshN-2018/TypeCraft" target="_blank">Want to change the font?</a></p> -->
 
             <!-- Breakpoints -->
@@ -105,7 +105,7 @@
                   <img class="cp-icon-fill" id="break-icon-tv-fill" src="resources/cp-images/icon-tv-fill.svg" alt="tv-icon">
                </div>
 
-               <div class="cp-break-wrapper">
+               <div class="cp-break-wrapper cp-break-inputs">
                   <input id="break-one" class="break-highlight-1" type="number" value="0">
                   <input id="break-two" class="break-highlight-2" type="number" value="0">
                   <input id="break-three" class="break-highlight-3" type="number" value="0">
