basic structure — but not sure how to target a different element. that isnt clicked without giving it a specific name.

--- a/index.html
+++ b/index.html
@@ -142,19 +142,16 @@
                <hr class="cp-hr">
                <div class="sect-title container-flex">
                   <h4>Type scale</h4>
-                  <svg id="info-typescale" class="info" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                  <svg id="info-typescale" class="info-button" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                     <title>info-icon</title>
                     <path d="M7.907,1a7,7,0,1,0,7,7A7,7,0,0,0,7.907,1ZM8.994,13H7.016V8H8.994ZM8,7.1A1.5,1.5,0,1,1,9.5,5.6,1.5,1.5,0,0,1,8,7.1Z"/>
                   </svg>
 
                </div>
-               <div id="tip-boxTS" class="tip-box container-flex">
+               <div id="tip-box" class="tip-box container-flex">
                   <p class="tip-message">
                      The Type Scale allows you to control the contrast between the levels in your hierarchy. Larger numbers mean bigger more exaggerated steps.
                   </p>
-                  <div class="tip-close">
-                     <img src="resources/cp-images/icon-cross.svg" alt="cross">
-                  </div>
                </div>
 
                <div class="cp-form">
