Move control-panel.css into a components folder
We are going to split up the contents of control-panel.css into smaller
files, but let us first lay the ground work by treating the file like it
only contains control-panel styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans:400,600" rel="stylesheet">
    <link rel="stylesheet" href="resources/reset.css">
    <link rel="stylesheet" href="resources/styles/main.css">
-   <link rel="stylesheet" href="resources/control-panel.css">
+   <link rel="stylesheet" href="resources/components/control-panel.css">
    <link rel="icon" href="resources/cp-images/favicon.png" type="image/png">
 
 </head>
