Move break-sections styling into break-sections.css
The ControlPanel component is not responsible for the BreakSections
styling, so it should not be in the same file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="resources/reset.css">
    <link rel="stylesheet" href="resources/styles/main.css">
    <link rel="stylesheet" href="resources/components/control-panel.css">
+   <link rel="stylesheet" href="resources/components/break-sections.css">
    <link rel="icon" href="resources/cp-images/favicon.png" type="image/png">
 
 </head>
