Add value-readout as a component

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="resources/components/control-panel.css">
    <link rel="stylesheet" href="resources/components/break-sections.css">
    <link rel="stylesheet" href="resources/components/tip-box.css">
+   <link rel="stylesheet" href="resources/components/value-readout.css">
    <link rel="icon" href="resources/cp-images/favicon.png" type="image/png">
 
 </head>
