--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>TypeCraft</title>
    <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans:400,600" rel="stylesheet">
-   <link rel="stylesheet" href="resources/reset.css">
+   <link rel="stylesheet" href="resources/styles/_reset.css">
    <link rel="stylesheet" href="resources/styles/main.css">
    <link rel="stylesheet" href="resources/components/button.css">
    <link rel="stylesheet" href="resources/components/control-panel.css">
