Remove all example text from html
In the future we want to make it possible to add/remove classes. That
means that we also need to add/remove example texts. Thus, we are going
to create and add the elements via JavaScript. We add the data-content
attribute so we can targer the content element more easy

--- a/index.html
+++ b/index.html
@@ -27,16 +27,7 @@
             <span>/ TypeCraft 1.0</span>
          </div>
 
-         <div class="content">
-            <p class="hero value-readout">It's a state of mind</p>
-            <p class="h1 value-readout">It's a state of mind</p>
-            <p class="h2 value-readout">It's a state of mind</p>
-            <p class="h3 value-readout">It's a state of mind</p>
-            <p class="h4 value-readout">It's a state of mind</p>
-            <p class="body-big value-readout">It's a state of mind</p>
-            <p class="body value-readout">It's a state of mind</p>
-            <p class="body-small value-readout">It's a state of mind</p>
-            <p class="body-x-small value-readout">It's a state of mind</p>
+         <div class="content" data-content>
          </div>
 
       </div>
