Toggle the control panel with data attributes
We set the state of the control panel via javascript. In this case via
the data-control-panel="open" or "close" attribute. It is convention to
use data attributes over classes because now it it clear from the html
that these values are modified by JavaScript. Also if you look at the
css, you see which styles are controlled by javascript because of the
[data-*=""] syntax

Further more, we use an actual button instead of a div. This way we get
keyboard interactivity for free! (once we apply focus styling...)

note that I did include the javascript file, in this commit, but it is
not used yet. In a future commit this will be include.

--- a/index.html
+++ b/index.html
@@ -59,15 +59,12 @@
       </section>
 
       <section class="control-panel">
-         <div class="cp-block" id="cp-block">
+         <div class="cp-block" id="cp-block" data-control-panel="open">
 
-         <!-- Button -->
-         <div class="cp-button" id="cp-button-on">
-            <img src="resources/images/carot-reverse.svg" alt="button">
-         </div>
-         <div class="cp-button" id="cp-button-off">
-            <img src="resources/images/carot.svg" alt="button">
-         </div>
+          <button class="cp-button" id="cp-button-off" data-toggle>
+            <img class="cp-button__img cp-button__img--open" src="resources/images/carot.svg" alt="">
+            <img class="cp-button__img cp-button__img--close" src="resources/images/carot-reverse.svg" alt="">
+          </button>
 
          <div class="cp-panel">
 
@@ -225,6 +222,7 @@
       </section>
 
       <!-- Please don't delete me I'm the reason everything works -->
-      <script src="resources/script.js"></script>
+      <!-- <script src="resources/script.js"></script> -->
+      <script src="resources/script-new.js" type="module"></script>
    </body>
    </html>
