--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
   </section>
 
-  <section class="control-panel">
+  <aside class="control-panel">
     <div class="cp-block" id="cp-block" data-control-panel="open">
 
       <button class="cp-button" id="cp-button-off" data-toggle>
@@ -149,9 +149,9 @@
         </div>
 
         <!-- Type scale -->
-        <div class="cp-form-block">
+        <article class="cp-form-block">
           <hr class="cp-hr">
-          <div class="sect-title container-flex">
+          <header class="sect-title container-flex">
             <h4>Type scale</h4>
             <svg id="info-typescale" class="info" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 16 16">
@@ -159,9 +159,9 @@
               <path
                 d="M7.907,1a7,7,0,1,0,7,7A7,7,0,0,0,7.907,1ZM8.994,13H7.016V8H8.994ZM8,7.1A1.5,1.5,0,1,1,9.5,5.6,1.5,1.5,0,0,1,8,7.1Z" />
             </svg>
-          </div>
+          </header>
 
-          <div id="tip-boxTS" class="tip-box container-flex">
+          <section id="tip-boxTS" class="tip-box container-flex">
             <p class="tip-message">
               The Type Scale allows you to control the contrast between the levels in your hierarchy. Larger numbers
               mean bigger more exaggerated steps.
@@ -169,9 +169,9 @@
             <div class="tip-close">
               <img src="resources/images/icon-cross.svg" alt="cross">
             </div>
-          </div>
+          </section>
 
-          <div class="cp-form">
+          <section class="cp-form">
             <!-- labels -->
             <div>
               <p class="break-highlight-1 label">small</p>
@@ -188,8 +188,8 @@
               <input id="base-scale-xl" class="break-highlight-4" type="number" step="0.01" value="0">
               <input id="base-scale-xxl" class="break-highlight-5" type="number" step="0.01" value="0">
             </div>
-          </div>
-        </div>
+          </section>
+        </article>
 
         <!-- Limits -->
         <div class="cp-form-block">
@@ -246,7 +246,7 @@
 
       </div>
     </div>
-  </section>
+  </aside>
 
   <!-- Please don't delete me I'm the reason everything works -->
   <!-- <script src="resources/script.js"></script> -->
