Remove input elements from Type Scale form to prepare for JS handling
We also add a data-form-block="type-scale" to the article element so it
can be referenced via JavaScript

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
 
         <!-- Type scale -->
-        <article class="cp-form-block">
+        <article class="cp-form-block" data-form-block="type-scale">
           <hr class="cp-hr">
           <header class="sect-title container-flex">
             <h4>Type scale</h4>
@@ -171,23 +171,7 @@
             </div>
           </section>
 
-          <section class="cp-form">
-            <!-- labels -->
-            <div>
-              <p class="break-highlight-1 label">small</p>
-              <p class="break-highlight-2 label">medium</p>
-              <p class="break-highlight-3 label">large</p>
-              <p class="break-highlight-4 label">x-large</p>
-              <p class="break-highlight-5 label">xx-large</p>
-            </div>
-            <!-- inputs -->
-            <div class="cp-input-block">
-              <input id="base-scale-s" class="break-highlight-1" type="number" step="0.01" value="0">
-              <input id="base-scale-m" class="break-highlight-2" type="number" step="0.01" value="0">
-              <input id="base-scale-l" class="break-highlight-3" type="number" step="0.01" value="0">
-              <input id="base-scale-xl" class="break-highlight-4" type="number" step="0.01" value="0">
-              <input id="base-scale-xxl" class="break-highlight-5" type="number" step="0.01" value="0">
-            </div>
+          <section data-sizes-control-group>
           </section>
         </article>
 
