Generate the Base Type controls from JavaScript
First we remove the hardcoded controls from the HTML. These are going to
be generated via JavaScript.

Then we generate them in control-panel.js. All the confusing generic
functions in control-panel.js start to make a little sense. Because we
made the functions generic, we can reuse them for a completely new form
block. Notice the amount of JavaScript changes in control-panel.js in
this commit. Now imagine that, in the future, we need to add yet another
form block which is dependend on the active breakpoint. That would be
really easy.

--- a/index.html
+++ b/index.html
@@ -125,27 +125,14 @@
 
         <!-- Functionality -->
         <!-- Base type size -->
-        <div class="cp-form-block">
+        <div class="cp-form-block" data-form-block="base-type">
           <hr class="cp-hr">
-          <h4>Base type size</h4>
-          <div class="cp-form">
-            <!-- labels -->
-            <div>
-              <p class="break-highlight-1 label">small</p>
-              <p class="break-highlight-2 label">medium</p>
-              <p class="break-highlight-3 label">large</p>
-              <p class="break-highlight-4 label">x-large</p>
-              <p class="break-highlight-5 label">xx-large</p>
-            </div>
-            <!-- inputs -->
-            <div class="cp-input-block">
-              <input id="base-type-s" class="break-highlight-1" type="number" value="0">
-              <input id="base-type-m" class="break-highlight-2" type="number" value="0">
-              <input id="base-type-l" class="break-highlight-3" type="number" value="0">
-              <input id="base-type-xl" class="break-highlight-4" type="number" value="0">
-              <input id="base-type-xxl" class="break-highlight-5" type="number" value="0">
-            </div>
-          </div>
+          <header class="sect-title container-flex">
+            <h4>Base type size</h4>
+          </header>
+
+          <section data-sizes-control-group>
+          </section>
         </div>
 
         <!-- Type scale -->
