Generate the breakpoint icons and inputs via JavaScript
For the same reason we generate all breakpoint-dependent controls via
JavaScript, if the user adds a breakpoint we need to manage the DOM, we do the same
for these. The added function takes two wrappers, each get filled with the icons and inputs.

Notice that we can reuse the function to highlight the active
breakpoint!

In the CSS we show/hide the images depending on the data attributes
which are set via JavaScript.

--- a/index.html
+++ b/index.html
@@ -83,41 +83,14 @@
         <!-- <p><a href="https://github.com/JoshN-2018/TypeCraft" target="_blank">Want to change the font?</a></p> -->
 
         <!-- Breakpoints -->
-        <div class="cp-form-block">
+        <div class="cp-form-block" data-breakpoint-indicator>
           <hr class="cp-hr">
           <h4 class="break-title">Break points</h4>
 
-          <div class="cp-break-wrapper">
-
-            <img class="cp-icon-outline break-icon-phone" id="break-icon-phone" src="resources/images/icon-phone.svg"
-              alt="phone-icon">
-            <img class="cp-icon-fill break-icon-phone" id="break-icon-phone-fill"
-              src="resources/images/icon-phone-fill.svg" alt="phone-icon">
-            <div class="divider"></div>
-            <img class="cp-icon-outline" id="break-icon-tablet" src="resources/images/icon-tablet.svg"
-              alt="tablet-icon">
-            <img class="cp-icon-fill" id="break-icon-tablet-fill" src="resources/images/icon-tablet-fill.svg"
-              alt="tablet-icon">
-            <div class="divider"></div>
-            <img class="cp-icon-outline" id="break-icon-laptop" src="resources/images/icon-laptop.svg"
-              alt="laptop-icon">
-            <img class="cp-icon-fill" id="break-icon-laptop-fill" src="resources/images/icon-laptop-fill.svg"
-              alt="laptop-icon">
-            <div class="divider"></div>
-            <img class="cp-icon-outline" id="break-icon-desktop" src="resources/images/icon-desktop.svg"
-              alt="desktop-icon">
-            <img class="cp-icon-fill" id="break-icon-desktop-fill" src="resources/images/icon-desktop-fill.svg"
-              alt="desktop-icon">
-            <div class="divider"></div>
-            <img class="cp-icon-outline" id="break-icon-tv" src="resources/images/icon-tv.svg" alt="tv-icon">
-            <img class="cp-icon-fill" id="break-icon-tv-fill" src="resources/images/icon-tv-fill.svg" alt="tv-icon">
+          <div class="cp-break-wrapper cp-break-wrapper--icons" data-breakpoint-icons>
           </div>
 
-          <div class="cp-break-wrapper cp-break-inputs">
-            <input id="break-one" class="break-highlight-1" type="number" value="0">
-            <input id="break-two" class="break-highlight-2" type="number" value="0">
-            <input id="break-three" class="break-highlight-3" type="number" value="0">
-            <input id="break-four" class="break-highlight-4" type="number" value="0">
+          <div class="cp-break-wrapper cp-break-wrapper--inputs" data-breakpoint-inputs>
           </div>
 
         </div>
