Generate limit controls via JavaScript
It is likely that the user wants to set their own limits for specific
classes in the future. Therefor, we should generate them via JavaScript.
We can reuse the same code that we have written for the basetype and
typescale controls, except that the limits are not breakpoint dependend.

This makes the naming of the functions which create the controls to
specific. It includes `sizes`. But now we also want them to function
with a different data set. So we rename the functions to be more
generic, as the classnames of the elements created.

Lastly we need to modify the css to set the opacity of input elements
only if it is breakpoint dependend (if it has a data-breakpoint
attribute)

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <h4>Base type size</h4>
           </header>
 
-          <section data-sizes-control-group>
+          <section data-control-group>
           </section>
         </div>
 
@@ -131,29 +131,20 @@
             </div>
           </section>
 
-          <section data-sizes-control-group>
+          <section data-control-group>
           </section>
         </article>
 
         <!-- Limits -->
-        <div class="cp-form-block">
+        <article class="cp-form-block" data-form-block="limits">
           <hr class="cp-hr">
-          <h4>Limits</h4>
-          <div class="cp-form">
-            <!-- labels -->
-            <div>
-              <p>minimum size</p>
-              <p>body-small max</p>
-              <p>body-x-small max</p>
-            </div>
-            <!-- inputs -->
-            <div class="cp-input-block">
-              <input id="min-type" class="alwaysOn" type="number" value="0">
-              <input id="max-type-small" type="number" class="alwaysOn" value="0">
-              <input id="max-type-x-small" type="number" class="alwaysOn" value="0">
-            </div>
-          </div>
-        </div>
+          <header>
+            <h4>Limits</h4>
+          </header>
+          
+          <section data-control-group>
+          </section>
+        </article>
 
         <!-- Final pixel sizes -->
         <div class="cp-form-block">
