Display output list via JavaScript
Again, a lot of refactoring here. The output list has quite a lot of
functionality in common with the input elements:
* It is based on a list in `script-new.js`
* It needs to render based on the classes the user is going to provide
* It is a list of labels and values

Actually the only thing really different is the kind of element used to
display the data, `input` for almost everything, `output` for this list.

We already have a specific function which generates the actual elements.
That is the function in lib/create-control-elements.js. The function
displayControlElements in control-panel.js only loops over an array and
invokes that function... In JavaScript we can pass around functions as
if it were values. So if displayControlElements does not create the
actual element itself, we can pass in the function that does as an
argument. Well, now the name of displayControlElements is no longer
correct. It can do much more. So we rename it to be a bit more generic,
as well as some variables inside of it

Then we create a new function in lib/create-control-element.js to
generate an output element. We rename the file because it does not deal
only with control elements anymore.

Because we refactored the displayFormElements function to accept a
function which does the actual creation, we need to pass that in within
setup.

Lastly we modify the HTML and pass the classes array into control-panel.
One thing to note in script-new.js is that there is now a dummy function
which binds the classname to a (for now) static value. That is something
we will come back to in the future

--- a/index.html
+++ b/index.html
@@ -147,38 +147,15 @@
         </article>
 
         <!-- Final pixel sizes -->
-        <div class="cp-form-block">
+        <article class="cp-form-block" data-output-block>
           <hr class="cp-hr">
-          <h4>Final pixel sizes</h4>
-          <div class="cp-form">
-            <!-- labels -->
-            <div>
-              <p>hero</p>
-              <p>h1</p>
-              <p>h2</p>
-              <p>h3</p>
-              <p>h4</p>
-              <p>body-big</p>
-              <p>body</p>
-              <p>body-small</p>
-              <p>body-x-small</p>
-            </div>
-            <!-- inputs -->
-            <div class="cp-print-block">
-              <output id="hero-final" name="x"></output>
-              <output id="h1-final" name="x"></output>
-              <output id="h2-final" name="x"></output>
-              <output id="h3-final" name="x"></output>
-              <output id="h4-final" name="x"></output>
-              <output id="body-b-final" name="x"></output>
-              <output id="body-final" name="x"></output>
-              <output id="body-s-final" name="x"></output>
-              <output id="body-xs-final" name="x"></output>
-            </div>
-          </div>
+          <header>
+            <h4>Final pixel sizes</h4>
+          </header>
 
-        </div>
-
+          <section data-control-group>
+          </section>
+        </article>
       </div>
     </div>
   </aside>
